Started working on api auth
